# sms

./: .env.example  .gitignore  HELP.md  README.md  alembic.ini  pyproject.toml  requirements.txt  run.sh  sample_data.sql
alembic/: README  env.py
alembic/versions/: 001_initial_schema.py  002_alter_timetable_day_period_to_int.py  003_subject_teachers.py
docs/: SPRING_TO_PYTHON_GUIDE.md
src/school_service/: __init__.py  config.py  database.py  main.py
src/school_service/models/: __init__.py  base.py  class_model.py  subject.py  teacher.py  timetable.py
src/school_service/repositories/: __init__.py  class_repository.py  subject_repository.py  teacher_repository.py  timetable_repository.py
src/school_service/routers/: class_router.py  subject_router.py  teacher_router.py  timetable_router.py
src/school_service/schemas/: __init__.py  class_schema.py  subject_schema.py  teacher_schema.py  timetable_schema.py
